--- a/LAB5/Views/Shared/_Layout.cshtml
+++ b/LAB5/Views/Shared/_Layout.cshtml
@@ -28,9 +28,33 @@
                         </li>
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <a class="nav-link text-dark" asp-controller="Lab" asp-action="Lab1">Lab1</a>
-                            <a class="nav-link text-dark" asp-controller="Lab" asp-action="Lab2">Lab2</a>
-                            <a class="nav-link text-dark" asp-controller="Lab" asp-action="Lab3">Lab3</a>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Lab" asp-action="Lab1">Lab1</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Lab" asp-action="Lab2">Lab2</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Lab" asp-action="Lab3">Lab3</a>
+                            </li>
+                            <!-- Додано нові кнопки навігації -->
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Manufacturer" asp-action="Index">Manufacturers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Customer" asp-action="Index">Customer</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="ServiceBooking" asp-action="Index">ServiceBooking</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Car" asp-action="Index">Cars</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-controller="Search" asp-action="Index">Search</a>
+                            </li>
+
+
                         }
                     </ul>
                     @if (User.Identity.IsAuthenticated)
@@ -65,7 +89,6 @@
                 </div>
             </div>
         </nav>
-
     </header>
     <div class="container">
         <main role="main" class="pb-3">
